Closed
Bug 1514441
Opened 7 years ago
Closed 7 years ago
Crash in mozalloc_abort | mozilla::net::(anonymous namespace)::TrackerFound
Categories
(Toolkit :: Safe Browsing, defect, P1)
Toolkit
Safe Browsing
Tracking
()
RESOLVED
FIXED
mozilla66
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox64 | --- | unaffected |
| firefox65 | --- | unaffected |
| firefox66 | --- | fixed |
People
(Reporter: jan, Assigned: baku)
References
Details
(4 keywords, Whiteboard: [qa-66b-p2])
Crash Data
Attachments
(1 file)
|
1.95 KB,
patch
|
dimi
:
review+
|
Details | Diff | Splinter Review |
Started and closed Nightly. Started and closed Nightly. Crash.
This bug was filed from the Socorro interface and is
report bp-acc2a7b0-6919-4412-8087-e00cc0181215.
=============================================================
Top 10 frames of crashing thread:
0 firefox-bin mozalloc_abort memory/mozalloc/mozalloc_abort.cpp:33
1 libxul.so mozilla::net:: memory/mozalloc/throw_gcc.h:74
2 libxul.so mozilla::net:: netwerk/url-classifier/AsyncUrlChannelClassifier.cpp:334
3 libxul.so mozilla::detail::RunnableFunction<nsUrlClassifierDBService::AsyncClassifyLocalWithFeatures toolkit/components/url-classifier/nsUrlClassifierDBService.cpp:2872
4 libxul.so nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1157
5 libxul.so NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:468
6 libxul.so mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:88
7 libxul.so MessageLoop::Run ipc/chromium/src/base/message_loop.cc:314
8 libxul.so nsBaseAppShell::Run widget/nsBaseAppShell.cpp:137
9 libxul.so nsAppStartup::Run toolkit/components/startup/nsAppStartup.cpp:271
=============================================================
| Reporter | ||
Updated•7 years ago
|
Flags: needinfo?(amarchesini)
Updated•7 years ago
|
Priority: -- → P1
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → amarchesini
Flags: needinfo?(amarchesini)
| Assignee | ||
Comment 1•7 years ago
|
||
Attachment #9031669 -
Flags: review?(dlee)
| Reporter | ||
Updated•7 years ago
|
Crash Signature: [@ mozalloc_abort | mozilla::net::(anonymous namespace)::TrackerFound] → [@ mozalloc_abort | mozilla::net::(anonymous namespace)::TrackerFound]
[@ vcruntime140.dll@0x4571 | mozilla::net::`anonymous namespace'::SetIsTrackingResourceHelper ]
[@ vcruntime140.dll@0x4461 | mozilla::net::`anonymous namespace'::SetIsTrackingResourc…
OS: Linux → All
Hardware: x86_64 → All
| Reporter | ||
Updated•7 years ago
|
Crash Signature: namespace'::SetIsTrackingResourceHelper ] → namespace'::SetIsTrackingResourceHelper ]
[@ vcruntime140.dll@0x43dc | msvcp140.dll@0x425be ]
[@ vcruntime140.dll@0x42cc | msvcp140.dll@0x350fe ]
[@ vcruntime140.dll@0x486c | msvcp140.dll@0x3644e ]
[@ vcruntime140.dll@0x76e5 | msvcp140.dll@0x2ff2b ]
…
| Reporter | ||
Updated•7 years ago
|
Crash Signature: ]
[@ vcruntime140.dll@0x4734 | std::_Xbad_function_call ]
[@ vcruntime140.dll@0x45a4 | std::_Xbad_function_call ]
[@ kernelbase.dll@0xbded ]
[@ kernelbase.dll@0x23a69 ]
[@ kernelbase.dll@0x1a419 ]
[@ kernelbase.dll@0x1a06d ]
[@ kernelbase.dll@0xd7… → ]
[@ vcruntime140.dll@0x4734 | std::_Xbad_function_call ]
[@ vcruntime140.dll@0x45a4 | std::_Xbad_function_call ]
| Reporter | ||
Updated•7 years ago
|
Crash Signature: ]
[@ vcruntime140.dll@0x4734 | std::_Xbad_function_call ]
[@ vcruntime140.dll@0x45a4 | std::_Xbad_function_call ] → ]
[@ vcruntime140.dll@0x4734 | std::_Xbad_function_call ]
[@ vcruntime140.dll@0x45a4 | std::_Xbad_function_call ]
[@ mozalloc_abort | abort | mozilla::net::(anonymous namespace)::BlacklistClassifierCallback::OnClassifyComplete ]
Updated•7 years ago
|
Attachment #9031669 -
Flags: review?(dlee) → review+
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/81afead63671
AsyncUrlChannelClassifier must keep a reference to the channel callback, r=dimi
Comment 3•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla66
Updated•7 years ago
|
Crash Signature: ]
[@ vcruntime140.dll@0x4734 | std::_Xbad_function_call ]
[@ vcruntime140.dll@0x45a4 | std::_Xbad_function_call ]
[@ mozalloc_abort | abort | mozilla::net::(anonymous namespace)::BlacklistClassifierCallback::OnClassifyComplete ] → ]
[@ vcruntime140.dll@0x4734 | std::_Xbad_function_call ]
[@ vcruntime140.dll@0x45a4 | std::_Xbad_function_call ]
[@ vcruntime140.dll@0x4721 | mozilla::net::HttpChannelParent::NotifyTrackingProtectionDisabled]
[@ vcruntime140.dll@0x44f1 | mozilla::ne…
Updated•7 years ago
|
Crash Signature: namespace)::BlacklistClassifierCallback::OnClassifyComplete ]
[@ kernelbase.dll@0x23a69]
[@ kernelbase.dll@0xbded] → namespace)::BlacklistClassifierCallback::OnClassifyComplete ]
[@ kernelbase.dll@0x23a69]
[@ kernelbase.dll@0xbded]
[@ CxxThrowException]
Updated•7 years ago
|
Whiteboard: [qa-66b-p2]
You need to log in
before you can comment on or make changes to this bug.
Description
•