Bug 1514441 - AsyncUrlChannelClassifier must keep a reference to the channel callback, r=dimi